[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "promptforge"
version = "0.1.0"
description = "A lightweight, provider-agnostic toolkit for prompt engineering and LLM agents."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]
keywords = ["llm", "ai", "prompt-engineering", "agents", "cli", "ml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "click>=8.1",
]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[project.scripts]
promptforge = "promptforge.cli:main"

[project.urls]
Homepage = "https://github.com/yourname/promptforge"

[tool.hatch.build.targets.wheel]
packages = ["src/promptforge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
